// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VerifyPage snapshots > renders error state 1`] = `
<div>
  <div
    class="mx-auto max-w-3xl px-4 py-8 sm:py-10"
  >
    <header
      class="mb-8 flex items-center gap-3"
    >
      <span
        aria-hidden="true"
        class="h-7 w-7 shrink-0 text-yellow-500"
        data-icon="Shield"
      />
      <div>
        <h1
          class="text-xl font-bold text-gray-900 dark:text-gray-100 sm:text-2xl"
        >
          Certificate Verifier
        </h1>
        <p
          class="text-sm text-gray-500 dark:text-gray-400"
        >
          No login required. Enter a certificate ID, reading hash, or transaction hash.
           
          <a
            class="underline hover:text-gray-700 dark:hover:text-gray-300"
            href="https://github.com/AnnabelJoe/solarproof/blob/main/docs/verify.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            How to use this page
          </a>
        </p>
      </div>
    </header>
    <form
      aria-label="Certificate verification form"
      class="mb-8"
      novalidate=""
    >
      <div
        class="flex flex-col gap-2 sm:flex-row"
      >
        <label
          class="sr-only"
          for="verify-query"
        >
          Certificate ID, reading hash, or transaction hash
        </label>
        <input
          aria-label="Certificate ID, reading hash, or transaction hash"
          aria-required="true"
          autocomplete="off"
          class="flex-1 rounded-lg border border-gray-300 bg-white px-4 py-2 text-sm text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-yellow-400 dark:border-gray-700 dark:bg-gray-900 dark:text-gray-100 dark:placeholder-gray-500 dark:focus:ring-yellow-500"
          id="verify-query"
          placeholder="Certificate ID, reading hash, or tx hash…"
          type="search"
          value="bad-id"
        />
        <button
          aria-busy="false"
          aria-label="Verify certificate"
          class="flex items-center justify-center gap-2 rounded-lg bg-yellow-400 px-4 py-2 text-sm font-medium text-gray-900 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:focus:ring-offset-gray-950"
          type="submit"
        >
          <span
            aria-hidden="true"
            class="h-4 w-4"
            data-icon="Search"
          />
          Verify
        </button>
      </div>
    </form>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
      Error: Not found
    </div>
    <div
      class="flex items-center gap-2 rounded-lg border border-red-200 bg-red-50 p-4 text-sm text-red-700 dark:border-red-800 dark:bg-red-950/40 dark:text-red-400"
      role="alert"
    >
      <span
        aria-hidden="true"
        class="h-4 w-4 shrink-0"
        data-icon="XCircle"
      />
      Not found
    </div>
  </div>
</div>
`;

exports[`VerifyPage snapshots > renders idle state 1`] = `
<div>
  <div
    class="mx-auto max-w-3xl px-4 py-8 sm:py-10"
  >
    <header
      class="mb-8 flex items-center gap-3"
    >
      <span
        aria-hidden="true"
        class="h-7 w-7 shrink-0 text-yellow-500"
        data-icon="Shield"
      />
      <div>
        <h1
          class="text-xl font-bold text-gray-900 dark:text-gray-100 sm:text-2xl"
        >
          Certificate Verifier
        </h1>
        <p
          class="text-sm text-gray-500 dark:text-gray-400"
        >
          No login required. Enter a certificate ID, reading hash, or transaction hash.
           
          <a
            class="underline hover:text-gray-700 dark:hover:text-gray-300"
            href="https://github.com/AnnabelJoe/solarproof/blob/main/docs/verify.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            How to use this page
          </a>
        </p>
      </div>
    </header>
    <form
      aria-label="Certificate verification form"
      class="mb-8"
      novalidate=""
    >
      <div
        class="flex flex-col gap-2 sm:flex-row"
      >
        <label
          class="sr-only"
          for="verify-query"
        >
          Certificate ID, reading hash, or transaction hash
        </label>
        <input
          aria-label="Certificate ID, reading hash, or transaction hash"
          aria-required="true"
          autocomplete="off"
          class="flex-1 rounded-lg border border-gray-300 bg-white px-4 py-2 text-sm text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-yellow-400 dark:border-gray-700 dark:bg-gray-900 dark:text-gray-100 dark:placeholder-gray-500 dark:focus:ring-yellow-500"
          id="verify-query"
          placeholder="Certificate ID, reading hash, or tx hash…"
          type="search"
          value=""
        />
        <button
          aria-busy="false"
          aria-label="Verify certificate"
          class="flex items-center justify-center gap-2 rounded-lg bg-yellow-400 px-4 py-2 text-sm font-medium text-gray-900 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:focus:ring-offset-gray-950"
          type="submit"
        >
          <span
            aria-hidden="true"
            class="h-4 w-4"
            data-icon="Search"
          />
          Verify
        </button>
      </div>
    </form>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    />
  </div>
</div>
`;

exports[`VerifyPage snapshots > renders success result 1`] = `
<div>
  <div
    class="mx-auto max-w-3xl px-4 py-8 sm:py-10"
  >
    <header
      class="mb-8 flex items-center gap-3"
    >
      <span
        aria-hidden="true"
        class="h-7 w-7 shrink-0 text-yellow-500"
        data-icon="Shield"
      />
      <div>
        <h1
          class="text-xl font-bold text-gray-900 dark:text-gray-100 sm:text-2xl"
        >
          Certificate Verifier
        </h1>
        <p
          class="text-sm text-gray-500 dark:text-gray-400"
        >
          No login required. Enter a certificate ID, reading hash, or transaction hash.
           
          <a
            class="underline hover:text-gray-700 dark:hover:text-gray-300"
            href="https://github.com/AnnabelJoe/solarproof/blob/main/docs/verify.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            How to use this page
          </a>
        </p>
      </div>
    </header>
    <form
      aria-label="Certificate verification form"
      class="mb-8"
      novalidate=""
    >
      <div
        class="flex flex-col gap-2 sm:flex-row"
      >
        <label
          class="sr-only"
          for="verify-query"
        >
          Certificate ID, reading hash, or transaction hash
        </label>
        <input
          aria-label="Certificate ID, reading hash, or transaction hash"
          aria-required="true"
          autocomplete="off"
          class="flex-1 rounded-lg border border-gray-300 bg-white px-4 py-2 text-sm text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-yellow-400 dark:border-gray-700 dark:bg-gray-900 dark:text-gray-100 dark:placeholder-gray-500 dark:focus:ring-yellow-500"
          id="verify-query"
          placeholder="Certificate ID, reading hash, or tx hash…"
          type="search"
          value="cert-abc-123"
        />
        <button
          aria-busy="false"
          aria-label="Verify certificate"
          class="flex items-center justify-center gap-2 rounded-lg bg-yellow-400 px-4 py-2 text-sm font-medium text-gray-900 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:focus:ring-offset-gray-950"
          type="submit"
        >
          <span
            aria-hidden="true"
            class="h-4 w-4"
            data-icon="Search"
          />
          Verify
        </button>
      </div>
    </form>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
      Certificate verified successfully.
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-2 rounded-lg border border-green-200 bg-green-50 p-4 dark:border-green-800 dark:bg-green-950/40"
        role="status"
      >
        <span
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-green-600 dark:text-green-400"
          data-icon="CheckCircle"
        />
        <span
          class="font-medium text-green-800 dark:text-green-300"
        >
          Certificate verified — full chain of custody confirmed
        </span>
      </div>
      <section
        aria-labelledby="section-certificate"
      >
        <div
          class="rounded-xl border border-gray-200 bg-white p-5 dark:border-gray-800 dark:bg-gray-900"
        >
          <h2
            class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-500 dark:text-gray-400"
            id="section-certificate"
          >
            Certificate
          </h2>
          <dl
            class="space-y-2"
          >
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                ID
              </dt>
              <dd
                class="break-all text-right text-gray-900 dark:text-gray-100 font-mono text-xs"
              >
                cert-abc-123
              </dd>
            </div>
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                Energy
              </dt>
              <dd
                class="break-all text-right text-gray-900 dark:text-gray-100 "
              >
                12.5 kWh
              </dd>
            </div>
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                Issued
              </dt>
              <dd
                class="break-all text-right text-gray-900 dark:text-gray-100 "
              >
                1/15/2024, 10:00:00 AM
              </dd>
            </div>
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                Status
              </dt>
              <dd
                class="break-all text-right text-gray-900 dark:text-gray-100 "
              >
                Active
              </dd>
            </div>
          </dl>
        </div>
      </section>
      <section
        aria-labelledby="section-on-chain-proof"
      >
        <div
          class="rounded-xl border border-gray-200 bg-white p-5 dark:border-gray-800 dark:bg-gray-900"
        >
          <h2
            class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-500 dark:text-gray-400"
            id="section-on-chain-proof"
          >
            On-chain proof
          </h2>
          <dl
            class="space-y-2"
          >
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                Anchor tx
              </dt>
              <dd>
                <a
                  aria-label="Anchor tx: anchor-tx-hash-abc (opens in new tab)"
                  class="flex items-center gap-1 break-all text-blue-600 hover:underline focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:ring-offset-2 rounded dark:text-blue-400 dark:focus:ring-yellow-500 dark:focus:ring-offset-gray-900 font-mono text-xs"
                  href="https://stellar.expert/anchor-tx-hash-abc"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  anchor-tx-hash-abc
                  <span
                    aria-hidden="true"
                    class="h-3 w-3 shrink-0"
                    data-icon="ExternalLink"
                  />
                </a>
              </dd>
            </div>
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                Mint tx
              </dt>
              <dd>
                <a
                  aria-label="Mint tx: mint-tx-hash-def (opens in new tab)"
                  class="flex items-center gap-1 break-all text-blue-600 hover:underline focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:ring-offset-2 rounded dark:text-blue-400 dark:focus:ring-yellow-500 dark:focus:ring-offset-gray-900 font-mono text-xs"
                  href="https://stellar.expert/mint-tx-hash-def"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  mint-tx-hash-def
                  <span
                    aria-hidden="true"
                    class="h-3 w-3 shrink-0"
                    data-icon="ExternalLink"
                  />
                </a>
              </dd>
            </div>
          </dl>
        </div>
      </section>
      <section
        aria-labelledby="section-meter-proof"
      >
        <div
          class="rounded-xl border border-gray-200 bg-white p-5 dark:border-gray-800 dark:bg-gray-900"
        >
          <h2
            class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-500 dark:text-gray-400"
            id="section-meter-proof"
          >
            Meter proof
          </h2>
          <dl
            class="space-y-2"
          >
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                Meter ID
              </dt>
              <dd
                class="break-all text-right text-gray-900 dark:text-gray-100 font-mono text-xs"
              >
                meter-xyz-456
              </dd>
            </div>
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                Reading hash
              </dt>
              <dd
                class="break-all text-right text-gray-900 dark:text-gray-100 font-mono text-xs"
              >
                abcdef1234567890…
              </dd>
            </div>
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                Signature
              </dt>
              <dd
                class="break-all text-right text-gray-900 dark:text-gray-100 font-mono text-xs"
              >
                sig1234567890abc…
              </dd>
            </div>
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                kWh
              </dt>
              <dd
                class="break-all text-right text-gray-900 dark:text-gray-100 "
              >
                12.5
              </dd>
            </div>
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                Timestamp
              </dt>
              <dd
                class="break-all text-right text-gray-900 dark:text-gray-100 "
              >
                1/15/2024, 9:55:00 AM
              </dd>
            </div>
            <div
              class="flex flex-wrap items-start justify-between gap-2 text-sm sm:gap-4"
            >
              <dt
                class="shrink-0 text-gray-500 dark:text-gray-400"
              >
                Ed25519 verified
              </dt>
              <dd
                class="break-all text-right text-gray-900 dark:text-gray-100 "
              >
                ✓ Valid
              </dd>
            </div>
          </dl>
        </div>
      </section>
    </div>
  </div>
</div>
`;
